--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "coffee-shop-project-root",
-  "version": "1.0.0",
-  "description": "Root package for coffee shop project",
-  "main": "index.js",
+  "name": "vite-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start-server": "json-server --watch db.json --port 5000",
-    "format": "prettier --write \"./**/*.{js,jsx,ts,tsx,json,css,md}\"",
-    "check-format": "prettier --check \"./**/*.{js,jsx,ts,tsx,json,css,md}\""
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "styled-components": "^6.1.19"
+  },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
