--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "json-server": "^1.0.0-beta.3",
+    "prettier": "3.6.2",
     "vite": "^7.0.4"
   }
 }
