--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "prettier": "^3.3.3",
-    "json-server": "^0.17.4"
+    "json-server": "^0.17.4",
+    "prettier": "^3.3.3"
+  },
+  "dependencies": {
+    "react-router-dom": "^7.7.0"
   }
 }
